--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,8 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=5.1
+  - asttokens=2.0.5
+  - backcall=0.2.0
   - blas=1.0
   - brotli=1.0.9
   - brotli-bin=1.0.9
@@ -13,6 +15,8 @@ dependencies:
   - cudatoolkit=11.3.1
   - cycler=0.11.0
   - dbus=1.13.18
+  - decorator=5.1.1
+  - executing=0.8.3
   - expat=2.4.4
   - ffmpeg=4.3
   - fontconfig=2.13.1
@@ -28,6 +32,8 @@ dependencies:
   - idna=3.3
   - intel-openmp=2021.4.0
   - jpeg=9e
+  - jupyter_client=7.2.2
+  - jupyter_core=4.10.0
   - krb5=1.19.2
   - lame=3.100
   - lcms2=2.12
@@ -35,7 +41,6 @@ dependencies:
   - libbrotlicommon=1.0.9
   - libbrotlidec=1.0.9
   - libbrotlienc=1.0.9
-  - libclang=10.0.1
   - libedit=3.1.20210910
   - libevent=2.1.12
   - libffi=3.3
@@ -48,6 +53,7 @@ dependencies:
   - libllvm10=10.0.1
   - libpng=1.6.37
   - libpq=12.9
+  - libsodium=1.0.18
   - libstdcxx-ng=11.2.0
   - libtasn1=4.16.0
   - libtiff=4.2.0
@@ -61,6 +67,7 @@ dependencies:
   - libxslt=1.1.35
   - lz4-c=1.9.3
   - matplotlib-base=3.5.1
+  - matplotlib-inline=0.1.2
   - mkl=2021.4.0
   - mkl_fft=1.3.1
   - mkl_random=1.2.2
@@ -75,8 +82,15 @@ dependencies:
   - openh264=2.1.1
   - openssl=1.1.1q
   - packaging=21.3
+  - parso=0.8.3
   - pcre=8.45
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - prompt-toolkit=3.0.20
+  - ptyprocess=0.7.0
+  - pure_eval=0.2.2
   - pycparser=2.21
+  - pygments=2.11.2
   - pyopenssl=22.0.0
   - pyparsing=3.0.4
   - pyqt=5.15.7
@@ -90,53 +104,99 @@ dependencies:
   - readline=8.1.2
   - six=1.16.0
   - sqlite=3.39.2
+  - stack_data=0.2.0
   - tk=8.6.12
   - toml=0.10.2
+  - traitlets=5.1.1
   - typing_extensions=4.3.0
   - tzdata=2022a
+  - wcwidth=0.2.5
   - wheel=0.37.1
   - xz=5.2.5
+  - zeromq=4.3.4
   - zlib=1.2.12
   - zstd=1.5.2
   - pip:
+    - absl-py==1.2.0
+    - astunparse==1.6.3
     - brotlipy==0.7.0
+    - cachetools==5.2.0
     - certifi==2022.6.15
     - cffi==1.15.1
     - charset-normalizer==2.1.0
     - cryptography==37.0.1
+    - debugpy==1.5.1
+    - entrypoints==0.4
+    - flatbuffers==1.12
     - future==0.18.2
+    - gast==0.4.0
+    - google-auth==2.10.0
+    - google-auth-oauthlib==0.4.6
+    - google-pasta==0.2.0
+    - grpcio==1.47.0
+    - h5py==3.7.0
+    - ipykernel==6.9.1
+    - ipython==8.4.0
+    - jedi==0.18.1
+    - joblib==1.1.0
+    - jupyter-client==7.2.2
+    - jupyter-core==4.10.0
+    - keras==2.9.0
+    - keras-preprocessing==1.1.2
     - kiwisolver==1.4.2
     - latexcodec==2.0.1
+    - libclang==14.0.6
+    - markdown==3.4.1
+    - markupsafe==2.1.1
     - matplotlib==3.5.1
     - mkl-fft==1.3.1
     - mkl-random==1.2.2
     - mkl-service==2.4.0
     - monty==2022.4.26
     - mpmath==1.2.1
+    - nest-asyncio==1.5.5
     - networkx==2.8.5
     - numpy==1.22.4
+    - oauthlib==3.2.0
+    - opt-einsum==3.3.0
     - palettable==3.3.0
     - pandas==1.4.3
     - pillow==9.2.0
     - pip==22.1.2
     - plotly==5.10.0
     - ply==3.11
+    - protobuf==3.19.4
+    - pyasn1==0.4.8
+    - pyasn1-modules==0.2.8
     - pybtex==0.24.0
     - pymatgen==2022.7.25
     - pyqt5-sip==12.11.0
     - pysocks==1.7.1
     - pytz==2022.2.1
     - pyyaml==6.0
+    - pyzmq==23.2.0
     - requests==2.28.1
+    - requests-oauthlib==1.3.1
+    - rsa==4.9
     - ruamel-yaml==0.17.21
     - ruamel-yaml-clib==0.2.6
+    - scikit-learn==1.1.2
     - scipy==1.7.3
     - setuptools==61.2.0
     - sip==6.6.2
+    - sklearn==0.0
     - spglib==1.16.5
     - sympy==1.10.1
     - tabulate==0.8.10
     - tenacity==8.0.1
+    - tensorboard==2.9.1
+    - tensorboard-data-server==0.6.1
+    - tensorboard-plugin-wit==1.8.1
+    - tensorflow==2.9.1
+    - tensorflow-estimator==2.9.0
+    - tensorflow-io-gcs-filesystem==0.26.0
+    - termcolor==1.1.0
+    - threadpoolctl==3.1.0
     - torch==1.12.1
     - torchvision==0.13.1
     - tornado==6.1
@@ -144,3 +204,5 @@ dependencies:
     - typing-extensions==4.3.0
     - uncertainties==3.1.7
     - urllib3==1.26.11
+    - werkzeug==2.2.2
+    - wrapt==1.14.1
