--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: compare_representations
+name: representations
 channels:
   - pytorch
   - defaults
@@ -107,6 +107,7 @@ dependencies:
   - stack_data=0.2.0
   - tk=8.6.12
   - toml=0.10.2
+  - traitlets=5.1.1
   - typing_extensions=4.3.0
   - tzdata=2022a
   - wcwidth=0.2.5
@@ -117,12 +118,7 @@ dependencies:
   - zstd=1.5.2
   - pip:
     - absl-py==1.2.0
-    - argon2-cffi==21.3.0
-    - argon2-cffi-bindings==21.2.0
     - astunparse==1.6.3
-    - attrs==22.1.0
-    - beautifulsoup4==4.11.1
-    - bleach==5.0.1
     - brotlipy==0.7.0
     - cachetools==5.2.0
     - certifi==2022.6.15
@@ -130,9 +126,7 @@ dependencies:
     - charset-normalizer==2.1.0
     - cryptography==37.0.1
     - debugpy==1.5.1
-    - defusedxml==0.7.1
     - entrypoints==0.4
-    - fastjsonschema==2.16.1
     - flatbuffers==1.12
     - future==0.18.2
     - gast==0.4.0
@@ -141,73 +135,46 @@ dependencies:
     - google-pasta==0.2.0
     - grpcio==1.47.0
     - h5py==3.7.0
-    - htmlmin==0.1.12
-    - imagehash==4.2.1
     - ipykernel==6.9.1
     - ipython==8.4.0
-    - ipython-genutils==0.2.0
-    - ipywidgets==7.7.1
     - jedi==0.18.1
-    - jinja2==3.1.2
     - joblib==1.1.0
-    - jsonschema==4.10.0
-    - jupyter==1.0.0
     - jupyter-client==7.2.2
-    - jupyter-console==6.4.4
     - jupyter-core==4.10.0
-    - jupyterlab-pygments==0.2.2
-    - jupyterlab-widgets==1.1.1
     - keras==2.9.0
     - keras-preprocessing==1.1.2
     - kiwisolver==1.4.2
     - latexcodec==2.0.1
     - libclang==14.0.6
-    - lxml==4.9.1
     - markdown==3.4.1
     - markupsafe==2.1.1
     - matplotlib==3.5.1
-    - missingno==0.5.1
-    - mistune==0.8.4
     - mkl-fft==1.3.1
     - mkl-random==1.2.2
     - mkl-service==2.4.0
     - monty==2022.4.26
     - mpmath==1.2.1
-    - multimethod==1.8
-    - nbclient==0.6.6
-    - nbconvert==6.5.3
-    - nbformat==5.4.0
     - nest-asyncio==1.5.5
     - networkx==2.8.5
-    - notebook==6.4.12
     - numpy==1.22.4
     - oauthlib==3.2.0
     - opt-einsum==3.3.0
     - palettable==3.3.0
     - pandas==1.4.3
-    - pandas-profiling==3.2.0
-    - pandocfilters==1.5.0
-    - phik==0.12.2
     - pillow==9.2.0
     - pip==22.1.2
     - plotly==5.10.0
     - ply==3.11
-    - prometheus-client==0.14.1
     - protobuf==3.19.4
     - pyasn1==0.4.8
     - pyasn1-modules==0.2.8
     - pybtex==0.24.0
-    - pydantic==1.9.2
     - pymatgen==2022.7.25
     - pyqt5-sip==12.11.0
-    - pyrsistent==0.18.1
     - pysocks==1.7.1
     - pytz==2022.2.1
-    - pywavelets==1.3.0
     - pyyaml==6.0
     - pyzmq==23.2.0
-    - qtconsole==5.3.1
-    - qtpy==2.2.0
     - requests==2.28.1
     - requests-oauthlib==1.3.1
     - rsa==4.9
@@ -215,16 +182,12 @@ dependencies:
     - ruamel-yaml-clib==0.2.6
     - scikit-learn==1.1.2
     - scipy==1.7.3
-    - seaborn==0.11.2
-    - send2trash==1.8.0
     - setuptools==61.2.0
     - sip==6.6.2
     - sklearn==0.0
-    - soupsieve==2.3.2.post1
     - spglib==1.16.5
     - sympy==1.10.1
     - tabulate==0.8.10
-    - tangled-up-in-unicode==0.2.0
     - tenacity==8.0.1
     - tensorboard==2.9.1
     - tensorboard-data-server==0.6.1
@@ -233,20 +196,14 @@ dependencies:
     - tensorflow-estimator==2.9.0
     - tensorflow-io-gcs-filesystem==0.26.0
     - termcolor==1.1.0
-    - terminado==0.15.0
     - threadpoolctl==3.1.0
-    - tinycss2==1.1.1
     - torch==1.12.1
     - torchvision==0.13.1
     - tornado==6.1
     - tqdm==4.64.0
-    - traitlets==5.3.0
     - typing-extensions==4.3.0
     - uncertainties==3.1.7
     - urllib3==1.26.11
-    - visions==0.7.4
-    - webencodings==0.5.1
     - werkzeug==2.2.2
-    - widgetsnbextension==3.6.1
     - wrapt==1.14.1
-prefix: /noether/s0/aqd5773/anaconda3/envs/compare_representations
+prefix: /noether/s0/aqd5773/anaconda3/envs/representations
