--- a/environment.yml
+++ b/environment.yml
@@ -16,6 +16,7 @@ dependencies:
   - cycler=0.11.0
   - dbus=1.13.18
   - decorator=5.1.1
+  - et_xmlfile=1.1.0
   - executing=0.8.3
   - expat=2.4.4
   - ffmpeg=4.3
@@ -127,6 +128,7 @@ dependencies:
     - cryptography==37.0.1
     - debugpy==1.5.1
     - entrypoints==0.4
+    - et-xmlfile==1.1.0
     - flatbuffers==1.12
     - future==0.18.2
     - gast==0.4.0
@@ -158,6 +160,7 @@ dependencies:
     - networkx==2.8.5
     - numpy==1.22.4
     - oauthlib==3.2.0
+    - openpyxl==3.0.10
     - opt-einsum==3.3.0
     - palettable==3.3.0
     - pandas==1.4.3
